<resources>
    <string name="app_name">JA2 Stracciatella</string>
    <string name="title_activity_launcher">Jagged Alliance 2 Stracciatella</string>
    <string name="floating_action_button_start_text">Start the game</string>
    <string name="tab_text_data">Data</string>
    <string name="tab_text_settings">Settings</string>
    <string name="game_dir_title_text">Original Jagged Alliance 2 Game Directory</string>
    <string name="game_dir_info_text">
        In order to get Jagged Alliance 2 Stracciatella to run, you need to copy the original game files
        to your Android device and select the directory they are residing in here.
        This directory should contain e.g. the .exe files and a Data directory.
    </string>
    <string name="game_dir_empty_text">No directory chosen yet</string>
    <string name="game_dir_select_button_label">Choose</string>
    <string name="resversion_title_text">Game version</string>
    <string name="res_title_text">Resolution</string>
    <string name="scaling_text_title">Scaling</string>
    <string name="debug_text_title">Enable debug mode</string>
    <string name="sound_text_title">Enable sound</string>
    <string name="fullscreen_text_title">Enable fullscreen</string>
    <string-array name="resversionArray">
        <item>English</item>
        <item>Dutch</item>
        <item>French</item>
        <item>German</item>
        <item>Italian</item>
        <item>Polish</item>
        <item>Russian</item>
        <item>Russian (Gold)</item>
    </string-array>
    <string-array name="scalingArray">
        <item>Linear interpolation</item>
        <item>Near perfect with oversampling</item>
        <item>Pixel perfect centered</item>
    </string-array>
</resources>