<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@android:drawable/divider_horizontal_textfield"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingRight="16dp"
            android:showDividers="middle">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="48dp">

                <TextView
                    android:id="@+id/gameDirInfoTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/game_dir_title_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/gameDirInfoText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/game_dir_info_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/gameDirInfoTitle" />

                <TextView
                    android:id="@+id/gameDirValueText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:text="@string/game_dir_empty_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/gameDirChooseButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/gameDirInfoText" />

                <Button
                    android:id="@+id/gameDirChooseButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/game_dir_select_button_label"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/gameDirInfoText" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                tools:layout_editor_absoluteX="-175dp"
                tools:layout_editor_absoluteY="458dp">

                <TextView
                    android:id="@+id/resversionTitleText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/resversion_title_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/resversionValueSpinner"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Spinner
                    android:id="@+id/resversionValueSpinner"
                    android:layout_width="180dip"
                    android:layout_height="wrap_content"
                    android:dropDownWidth="wrap_content"
                    android:entries="@array/resversionArray"
                    android:minHeight="40dip"
                    android:spinnerMode="dropdown"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:minHeight="48dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toStartOf="@+id/textInputLayout"
                app:layout_constraintStart_toStartOf="@+id/textInputLayout">

                <TextView
                    android:id="@+id/resTitleText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/res_title_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/resTextInput"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_conversion_absoluteHeight="19dp"
                    tools:layout_conversion_absoluteWidth="206dp" />

                <EditText
                    android:id="@+id/resTextInput"
                    android:layout_width="180dip"
                    android:layout_height="wrap_content"
                    android:hint="640x480"
                    android:maxLines="1"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_conversion_absoluteHeight="40dp"
                    tools:layout_conversion_absoluteWidth="206dp"
                    android:autofillHints="640x480"
                    android:importantForAutofill="yes"
                    android:inputType="text" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp">

                <TextView
                    android:id="@+id/scalingTitleText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/scaling_text_title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/scalingValueSpinner"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Spinner
                    android:id="@+id/scalingValueSpinner"
                    android:layout_width="180dip"
                    android:layout_height="wrap_content"
                    android:dropDownWidth="wrap_content"
                    android:entries="@array/scalingArray"
                    android:minHeight="40dip"
                    android:spinnerMode="dropdown"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <CheckBox
                android:id="@+id/fullscreenCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:button="@null"
                android:checked="true"
                android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                android:minHeight="48dp"
                android:text="@string/fullscreen_text_title" />

            <CheckBox
                android:id="@+id/soundCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:button="@null"
                android:checked="true"
                android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                android:minHeight="48dp"
                android:text="@string/sound_text_title" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>